...
        cell.DoneButton.hidden = YES;
        cell.CellTextView.hidden = YES;
        cell.CellTextLabel.hidden = NO;
        
        NSString *titleText = @"blank";
        if (self.showDateCells) {
            titleText = [NSString stringWithFormat:@"Due Someday"];
        }else if (self.showDatePicker){
            
                NSDateFormatter *df = [[NSDateFormatter alloc]init];
                [df setDateFormat:@"EEE MMM dd, yyyy"];
                NSString * dateString = [df stringFromDate:self.dateToSet];
            
...
    NSArray *sortDescriptors = @[sortDescriptor];
    
    [fetchRequest setSortDescriptors:sortDescriptors];
    
    // Edit the section name key path and cache name if appropriate.
    // nil for section name key path means "no sections".
    NSFetchedResultsController *aFetchedResultsController = [[NSFetchedResultsController alloc] initWithFetchRequest:fetchRequest managedObjectContext:context sectionNameKeyPath:nil cacheName:@"Master"];
    self.fetchedResultsController = aFetchedResultsController;
    [NSFetchedResultsController deleteCacheWithName:@"Master"];
    
    
    NSError *error = nil;
    if (![self.fetchedResultsController performFetch:&error]) {
...
