...
    // Return NO if you do not want the specified item to be editable.
    return YES;
}

-(NSArray *)tableView:(UITableView *)tableView editActionsForRowAtIndexPath:(NSIndexPath *)indexPath {
    
    UITableViewRowAction *deleteButton = [UITableViewRowAction rowActionWithStyle:UITableViewRowActionStyleDefault title:@"DELETE" handler:^(UITableViewRowAction *action, NSIndexPath *indexPath)
                                          {
                                              
                                              Item *itemToDelete = [self findItemAtIndexPath:indexPath];
                                              
                                              [DeleteItemFromServer deleteThisItem:itemToDelete];
                                              int timestamp = [[NSDate date] timeIntervalSince1970];
...
