...
            cell.datePicker.date = self.detailItem.duedate;
            
        }else{
            [cell.dateButton1 setTitle: @"Due Someday" forState: UIControlStateNormal];
            
        }
        [cell.dateButton2 setTitle: @"Today" forState: UIControlStateNormal];
        [cell.dateButton3 setTitle: @"Tomorrow" forState: UIControlStateNormal];
        [cell.dateButton4 setTitle: @"Someday" forState: UIControlStateNormal];
        
        [cell.datePicker addTarget:self
                            action:@selector(datePickerValueChanged:)
                  forControlEvents:UIControlEventValueChanged];
...
